--- a/kubernetes/deployment-production.tmpl
+++ b/kubernetes/deployment-production.tmpl
@@ -17,6 +17,13 @@ spec:
       containers:
         - name: seven-ten-production-app
           image: zooniverse/seven-ten:__IMAGE_TAG__
+          resources:
+             requests:
+               memory: "200Mi"
+               cpu: "10m"
+             limits:
+               memory: "200Mi"
+               cpu: "500m"
           env:
             - name: RAILS_ENV
               value: production
@@ -69,6 +76,13 @@ spec:
       containers:
         - name: seven-ten-production-sidekiq
           image: zooniverse/seven-ten:__IMAGE_TAG__
+          resources:
+             requests:
+               memory: "200Mi"
+               cpu: "10m"
+             limits:
+               memory: "200Mi"
+               cpu: "500m"
           args: ["/rails_app/docker/start_sidekiq.sh"]
           env:
             - name: RAILS_ENV
